<resources>
    <string name="app_name">InventoryApp</string>
    <string name="add_data_to_inventory">Add Data To Inventory</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="item_sold">Item Sold</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_price">Item Price</string>
    <string name="item_description">Item Description</string>
    <string name="item_name">Item Name</string>
    <string name="modification_factor">Factor</string>
</resources>
